ui second commit

--- a/libraymanagementsystem/public_html/reservation.html
+++ b/libraymanagementsystem/public_html/reservation.html
@@ -43,6 +43,8 @@ and open the template in the editor.
             <label for="Ano" class="col-sm-6 control-label"><b>9 - A</b></label>
             <label for="Ano" class="col-sm-4 control-label">status :</label>
             <label for="Ano" class="col-sm-6 control-label"><b>inactive</b></label>
+            <label for="Ano" class="col-sm-6 control-label">not given books :</label>
+            <label for="Ano" class="col-sm-6 control-label"><b>No</b></label>
             <label for="Ano" class="col-sm-4 control-label">due :</label>
             <label for="Ano" class="col-sm-6 control-label"><b>0.00</b></label>
             <button type="button" class="btn btn-default">pay</button>
