--- a/libraymanagementsystem/public_html/addbook.html
+++ b/libraymanagementsystem/public_html/addbook.html
@@ -12,53 +12,92 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link href="css/docs.css" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <center><h2>Add book</h2></center>
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-4">
-                <label for="id" class="col-sm-4 control-label">Book id</label>
-                <input type="text" placeholder="Book id">
-                <button type="button" class="btn btn-primary">generate</button><br>
-                <label for="id" class="col-sm-4 control-label">Book Name</label>
-                <input type="text" placeholder="Book name">
-                <label for="id" class="col-sm-4 control-label">Author</label>
-                <input type="text" placeholder="Author">
-                <label for="id" class="col-sm-4 control-label">ISBN No</label>
-                <input type="text" placeholder="ISBN No">
-                <label for="type" class="col-sm-4 control-label">Book Type</label>
-                <label for="id" class="col-sm-4 control-label">Book category</label>
-                <label for="id" class="col-sm-4 control-label">price</label>
-                <input type="text" placeholder="price">
-                <label for="id" class="col-sm-4 control-label">Rack No</label>
-                <input type="text" placeholder="Rack No">
-                
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-4">
-                <div class="row">
+    <center><h2>Add book</h2></center>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-4">
+            <label for="id" class="col-sm-4 control-label">Book id</label>
+            <input type="text" placeholder="Book id">
+            <button type="button" class="btn btn-primary">generate</button><br>
+            <label for="id" class="col-sm-4 control-label">Book Name</label>
+            <input type="text" placeholder="Book name">
+            <label for="id" class="col-sm-4 control-label">Author</label>
+            <input type="text" placeholder="Author">
+            <label for="id" class="col-sm-4 control-label">ISBN No</label>
+            <input type="text" placeholder="ISBN No">
+            <label for="type" class="col-sm-4 control-label">Book Type</label>
+            <select class="form-control">
+                <option value="" selected disabled>select type</option>
+                <option>Sinhala</option>
+                <option>English</option>
+
+            </select> 
+            <label for="id" class="col-sm-4 control-label">Book category</label>
+            <select class="form-control">
+                <option value="" selected disabled>select category</option>
+                <option>grade 9 science</option>
+                <option>maths</option>
+
+            </select> 
+            <label for="id" class="col-sm-4 control-label">price</label>
+            <input type="text" placeholder="price">
+            <label for="id" class="col-sm-4 control-label">Rack No</label>
+            <input type="text" placeholder="Rack No">
+            <label for="id" class="col-sm-5 control-label">lending section</label>
+            <input type="checkbox"> <br>
+            <label for="id" class="col-sm-5 control-label">reference section</label>
+            <input type="checkbox"><br>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-4">
+            <div class="row">
                 <div class="col-md-4">
-                <br>
-                <img src="image/onesheet.jpg" alt="..." class="img-circle"><br>
+                    <br>
+                    <img src="image/onesheet.jpg" alt="..." class="img-circle"><br>
                 </div>
                 <div class="col-md-1">
                     <br><br><br>
-                <button type="button" class="btn btn-primary">add pic</button><br>
+                    <button type="button" class="btn btn-primary">add pic</button><br>
                 </div>
-                    </div>
-                <br>
-                <label for="description" class="col-sm-4 control-label">Description</label>
-                <textarea class="form-control" rows="9" placeholder="Description"></textarea>
             </div>
+            <br>
+            <label for="description" class="col-sm-4 control-label">Description</label>
+            <textarea class="form-control" rows="9" placeholder="Description"></textarea>
         </div>
-        <div class="row">
+    </div>
+    <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-5">
             <button type="button" class="btn btn-default"> back </button>
             <button type="button" class="btn btn-default"> remove </button>
             <button type="button" class="btn btn-default"> save</button>
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal"> Add copy</button>
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">Add Copy</h4>
+                        </div>
+                        <div class="modal-body">
+                            <label for="id" class="col-sm-4 control-label">number of copies</label>  
+                            <input type="text" placeholder="number of copies" class="col-sm-3 control-label">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Add</button>
+                            <div class="container">
+        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    </body>
+
+</body>
 </html>
